--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-label": "^2.1.7",
     "@react-email/components": "^0.3.2",
     "@tabler/icons-react": "^3.34.0",
+    "axios": "^1.10.0",
     "clsx": "^2.1.1",
     "motion": "^12.23.6",
     "next": "15.4.1",
